# Proompt

./: .gitignore  AGENTS.md  Cargo.toml  GETTING_STARTED.md  PRD.md  README.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  tsconfig.json
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs
app/src/lib/components/: EnhancePanel.svelte  HistoryPanel.svelte  SettingsPanel.svelte  TemplatesPanel.svelte
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: config.rs  enhance.rs  history.rs  mod.rs  template.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  routing.rs
crates/core/src/config/: manager.rs  mod.rs
crates/core/src/enhance/: configured.rs  image.rs  mod.rs  text.rs
crates/core/src/history/: mod.rs
crates/core/src/integrations/: mod.rs  supermemory.rs
crates/core/src/integrations/llm/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/core/src/platform/: detector.rs  mod.rs
crates/core/src/templates/: builtin.rs  manager.rs  mod.rs
crates/core/src/usage/: mod.rs  tracker.rs
docs/: coding-agent-mode.md  macos-signing.md  release.md  unsigned-macos-qa.md
docs/releases/: TEMPLATE.md  v0.3.2.md  v0.3.3.md
