[workspace]
members = ["crates/core", "crates/cli", "app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = ["Proompt"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
