[package]
name = "proompt-app"
version = "0.2.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
proompt-core = { path = "../../crates/core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
