[package]
name = "proompt-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
futures-util = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
keyring = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
